* 2013-10-22 - tobias.friedrich@open-xchange.com

 - Fix for bug 29391: Extended the sizes of the 'filename', 'title' and 'file_size' columns in the 'infostore_document' table

* 2013-10-21 - marcus.klein@open-xchange.com

 - Fix for bug 26072: Using a master thread in a single thread executor service to create new threads for the thread pool. This ensures that
   new threads for the thread pool inherit the correct thread context classloader.

* 2013-10-21 - thorben.betten@open-xchange.com

 - Fix for bug 29294: Examine first read byte prior to pushing it back to stream

* 2013-10-18 - martin.herfurth@open-xchange.com

 - Fix for bug 28958: Create and handle counter mails for external organizer.

* 2013-10-17 - martin.herfurth@open-xchange.com

 - Fix for bug 29133: Special series pattern lead to reset of confirmation status.

* 2013-10-17 - thorben.betten@open-xchange.com

 - Fix for bug 21673: Signal appropriate permission for Unified Mail folders
 - Fix for bug 29288: Preload document meta data
 - Fix for bug 29322: Changed wording of error messages to not contain "Open-Xchange" due to branding/theming reasons

* 2013-10-16 - thorben.betten@open-xchange.com

 - Fix for bug 29293: Adapted JavaDoc to current behavior on session remote distribution

* 2013-10-15 - martin.herfurth@open-xchange.com

 - Fix for bug 29268: Missing alarm value "0" for list requests.

* 2013-10-15 - thorben.betten@open-xchange.com

 - Fix for bug 29227: Extended check for S/MIME messages according to rfc5751; section-3.9
 - Fix for bug 29187: Localized submit button name
 - Fix for bug 29282: Sanitize invalid UTC date format string
 - Fix for bug 29283: More robust parsing if a header's parameter list

* 2013-10-14 - thorben.betten@open-xchange.com

 - Fix for bug 29263: Fixed property constant from "com.openexchange. cookie.forceHTTPS" to "com.openexchange.forceHTTPS"
 - Fix for bug 29262: Read Jolokia configuration only if enabled via "com.openexchange.jolokia.start" property